[gd_scene load_steps=5 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/GUI/PathChoiceButton/Black_PathChoiceButton.gd" type="Script" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/Assets/GUIAssets/Choice_Border_Hovered.png" type="Texture" id=3]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/Assets/GUIAssets/Choice_Border_Normal.png" type="Texture" id=4]

[node name="Black_PathChoiceButton" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvancedButton" parent="." instance=ExtResource( 1 )]
margin_right = 62.0
margin_bottom = 62.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="BlackPathTextureRect" type="TextureRect" parent="."]
margin_left = 31.0
margin_top = 31.0
margin_right = 31.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
[connection signal="mouse_entered" from="AdvancedButton" to="." method="_on_AdvancedButton_mouse_entered"]
[connection signal="pressed_mouse_event" from="AdvancedButton" to="." method="_on_AdvancedButton_pressed_mouse_event"]
